deployments/jellyfin/jellyfin-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
        app.kubernetes.io/name: jellyfin
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      volumes:
      - name: nfs-jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-pvc-config
      - name: nfs-jellyfin-data
        persistentVolumeClaim:
          claimName: media-pvc-data
      containers:
      - image: jellyfin/jellyfin
        imagePullPolicy: Always
        name: jellyfin
        resources: 
          requests: 
              gpu.intel.com/i915: "1" 
          limits: 
              gpu.intel.com/i915: "1" 
        ports:
        - containerPort: 8096
          name: web
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: nfs-jellyfin-config
          subPath: config
        - mountPath: /cache
          name: nfs-jellyfin-config
          subPath: cache
        - mountPath: "/Audiobooks"
          readOnly: false
          name: nfs-jellyfin-data
          subPath: Audiobooks
        - mountPath: "/Movies"
          readOnly: false
          name: nfs-jellyfin-data
          subPath: Movies
        - mountPath: "/TVShows"
          readOnly: false
          name: nfs-jellyfin-data
          subPath: TVShows
        - mountPath: "/Music"
          readOnly: false
          name: nfs-jellyfin-data
          subPath: Music

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: media 
spec:
  ports:
  - name: web-tcp
    port: 8096
    protocol: TCP
    targetPort: 8096
  - name: web-udp
    port: 8096
    protocol: UDP
    targetPort: 8096
  selector:
    app: jellyfin
