deployments/jellyfin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.jellyfin.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
    - match: Host(`jellyfin.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
      middlewares:
        - name: default-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
