deployments/jellyfin/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: media
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: "kube-system"
      - podSelector:
          matchLabels:
            k8s-app: "kube-dns"
